# library_project_template

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: core.hpp  test.hpp
lib/src/: test.cpp
