set(CMAKE_PROJECT_MINIMUM_VERSION 3.10)
cmake_minimum_required(VERSION ${CMAKE_PROJECT_MINIMUM_VERSION})


set(PROJECT_NAME template)
set(PROJECT_ACRONYM tp)
set(PROJECT_VERSION 1.0.0)
string(TOUPPER ${PROJECT_ACRONYM} PROJECT_ACRONYM_UPPERL_CASE)

set(LIBRARY_NAME ${PROJECT_NAME})
set(LIBRARY_VERSION ${PROJECT_VERSION})

set(SANDBOX_NAME ${PROJECT_NAME}_Sandbox)
set(SANDBOX_VERSION ${PROJECT_VERSION})

set(TESTS_NAME ${PROJECT_NAME}_Tests)
set(TESTS_VERSION ${PROJECT_VERSION})


add_subdirectory(lib)
add_subdirectory(sandbox)
add_subdirectory(tests)